@@ -1,3 +1,12 @@
+2003-06-17  Jochen Hoenicke  <jochen@gnu.org>
+
+	* stage2/fsys_reiserfs.c (read_tree_node): Fixed a typo; only
+	matters for very large fs when tree doesn't fit in cache.
+	(IH_KEY_OFFSET): Don't check for INFO->version.  There are
+	actually old version file systems that use new version items.
+	(IH_KEY_ISTYPE): Likewise.
+	(reiserfs_dir): Likewise.
+
 2003-08-09  Thierry Laronde  <tlaronde@polynum.org>
 
 	* util/mkbimage: NEW File. `mkbimage' depends on GRUB and existed
